# openwrt_devtool

./: .gitignore  AGENTS.md  devtool.sh  history.md  readme.md
.devtool/configs/: core.conf  path.conf  version.conf
.devtool/ref-Makefile/: Makefile.autotools.generic  Makefile.cmake.generic  Makefile.files-package.generic  Makefile.make.generic  Makefile.meson.generic  Makefile.none.prpl_plugin  Makefile.prebuilt-artifacts.generic  Makefile.python3-module.generic
.devtool/ref-sources/autotools_hello-world/: README.md  configure.ac
.devtool/ref-sources/autotools_hello-world/src/: main.c
.devtool/ref-sources/cmake_hello-world/: .gitignore  CMakeLists.txt  README.md
.devtool/ref-sources/cmake_hello-world/src/: foo.c  main.c
.devtool/ref-sources/files_hello-package/: README.md
.devtool/ref-sources/make_hello-world/: Makefile  README.md
.devtool/ref-sources/meson_hello-world/: README.md  meson.build
.devtool/ref-sources/none_prpl-plugin-generic/: .gitignore  makefile  makefile.inc  readme.md
.devtool/ref-sources/prebuilt_hello-artifacts/: README.md
.devtool/ref-sources/python3_hello-module/: README.md  pyproject.toml
.devtool/scripts/: _core.sh  _init.sh  _utils.sh  action_abort.sh  action_finish.sh  action_list.sh  action_modify.sh  action_new.sh  action_patch.sh
tests/: run_tests.sh  test_action_abort.sh  test_action_finish.sh  test_action_list.sh  test_action_modify.sh  test_action_new.sh  test_action_patch.sh  test_core.sh  test_devtool_cli.sh  test_templates.sh  test_utils.sh
tests/lib/: assertions.sh
(+15 files in other folders)
